--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 :root {
     --dark-color:#19283f;
     --green-color:#33d1cc;
+    --green-transparent-color:rgb(51 209 204 / 76%);
     --red-color:#ff3150;
     --red-light-color:#fe697f;
     --yellow-color:#ffc400;
@@ -9,7 +10,6 @@
 
 body {
     font-family: 'Roboto',sans-serif;
-    height: 10000px;
 }
 
 .navbar {
@@ -100,4 +100,127 @@ body {
 
 .features .feat h4 {
     color: var(--yellow-color);
+}
+
+.our-work {
+    background-color: var(--section-color);
+}
+
+.our-work ul .active {
+    background-color: var(--red-color);
+    color: var(--yellow-color);
+}
+
+.our-work ul li {
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.our-work ul li:not(.active):hover {
+    color: var(--red-color);
+}
+
+.our-work .box {
+    padding: 5px;
+    overflow: hidden;
+    position: relative;
+}
+
+.our-work .box::before {
+    content: attr(data-work);
+    position: absolute;
+    background-color: var(--green-transparent-color);
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: white;
+    transition: 0.3s;
+    font-size: 1.5rem;
+    transform: translateX(calc(-100% - 5px));
+}
+
+.our-work .box:hover::before {
+    transform: translateX(0);
+}
+
+.stuff .description {
+    max-width: 500px;
+}
+
+.team {
+    background-color: var(--section-color);
+}
+
+.team h2 {
+    color: var(--yellow-color);
+}
+
+.team .box h4 {
+    background-color: var(--green-color);
+}
+
+.project {
+    background-color: var(--dark-color);
+}
+
+.blog .card {
+    border: 0 !important;
+}
+
+.subscribe {
+    background-color: var(--yellow-color);
+}
+
+.subscribe input[type='text'] {
+    border: none;
+    border-bottom: 1px solid white;
+}
+
+.subscribe input[type='text']:focus {
+    outline: none;
+}
+
+.subscribe ::placeholder {
+    color: white;
+}
+
+.subscribe input[type='submit'] {
+    color: var(--yellow-color);
+    background-color: var(--dark-color);
+}
+
+.footer {
+    background-color: var(--dark-color);
+}
+
+.footer .copyright > span {
+    color: var(--green-color);
+}
+
+.footer .copyright div span {
+    color: var(--yellow-color);
+}
+
+.footer .contact ul svg {
+    width: 20px;
+    height: 20px;
+}
+
+.footer .facebook {
+    background-color: #1877f2;
+}
+
+.footer .twitter {
+    background-color: #1da1f2;
+}
+
+.footer .youtube {
+    background-color: #ff0000;
+}
+
+.footer .instagram {
+    background-color: #c13584;
 }
